# truck-billing

./: .env  .gitignore  Cargo.toml  README.md
docs/: 数据库设计.md  设计文档.md
src/: main.rs
src/billing_service/: controller.rs  service.rs
src/entities/: billing.rs  billing_item.rs  car.rs  item.rs  mod.rs  prelude.rs  role.rs  sea_orm_active_enums.rs  team.rs  team_car.rs  team_driver.rs  user.rs
src/role_service/: controller.rs  service.rs
src/team_service/: controller.rs  service.rs
src/user_service/: controller.rs  service.rs
