[package]
name = "truck-billing"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]


[dependencies]
poem = "1.3.41"
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.15"

[dependencies.sea-orm] # remove this line in your own project
version = "^0.9.0" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros"
]