[package]
name = "truck-billing"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]


[dependencies]
poem = "1.3.41"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.15"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.144"
chrono = "0.4.22"

[dependencies.sea-orm] # remove this line in your own project
version = "^0.9.0" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]